# Medical-Chatbot

./: .gitignore  README.md  app.py  ingest.py  pyproject.toml  requirements.txt  store_index.py  template.sh
.github/workflows/: cicd.yaml
research/: trails.ipynb
src/: helper.py  logger_config.py  prompt.py
